k8s-ficheros/spark-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: spark
  name: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spark
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/red1: "true"
        io.kompose.service: spark
    spec:
      containers:
      - image: nacho/spark
        imagePullPolicy: IfNotPresent
        name: spark
        ports:
        - containerPort: 7077
        resources: {}
      hostname: spark
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
