k8s-ficheros/red1-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: red1
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/red1: "true"
  podSelector:
    matchLabels:
      io.kompose.network/red1: "true"
